--- a/src/app/components/formulario/formulario.component.html
+++ b/src/app/components/formulario/formulario.component.html
@@ -7,7 +7,7 @@
       id="nombre"
       placeholder="Nombre"
       class="form-control"
-      [(ngModel)]="nombreInput"
+      #nombreInput
     />
   </div>
 
@@ -19,12 +19,16 @@
       id="apellido"
       placeholder="Apellido"
       class="form-control"
-      [(ngModel)]="apellidoInput"
+      #apellidoInput
+
     />
   </div>
 
   <div class="col">
-    <button type="submit" class="btn btn-primary" (click)="agregarPersona()">
+    <button
+      type="submit"
+      class="btn btn-primary"
+      (click)="agregarPersona(nombreInput, apellidoInput)">
       Agregar
     </button>
   </div>
