--- a/src/app/components/formulario/formulario.component.html
+++ b/src/app/components/formulario/formulario.component.html
@@ -28,7 +28,7 @@
     <button
       type="submit"
       class="btn btn-primary"
-      (click)="agregarPersona(nombreInput, apellidoInput)">
+      (click)="agregarPersona()">
       Agregar
     </button>
   </div>
