--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,9 +3,9 @@
     <h3>{{ titulo }}</h3>
   </div>
 
-  <app-formulario
-    (personaCreada) = "personaAgregada($event)"
-  ></app-formulario>
+  <app-formulario></app-formulario>
+    <!-- (personaCreada) = "onPersonaAgregada($event)" -->
+
 
   <hr />
 
