--- a/src/app/components/persona/persona.component.html
+++ b/src/app/components/persona/persona.component.html
@@ -3,6 +3,10 @@
     <div class="col">
       <div>
         {{ indice + 1}}: {{ persona.nombre }} {{ persona.apellido }}
+        <button
+          type="submit"
+          class="btn btn-success m-2"
+          (click) = "emitirSaludo()">Editar</button>
     </div>
       </div>
   </div>
